# fix-exchange

./: .gitattributes  .gitignore  .releaserc.json  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: benchmark.yml  release.yml
bench/: bench.py  plot_history.py  rebaseline.sh  results.db
config/: exchange.cfg
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONFIGURATION.md  MESSAGES.md  PERFORMANCE.md  UI.md
scripts/: build.sh
src/: main.cpp
src/admin/: AdminGateway.cpp  AdminGateway.h
src/engine/: MatchingEngine.cpp  MatchingEngine.h  Order.h  OrderBook.cpp  OrderBook.h  RingBuffer.h
src/gateway/: FixGateway.cpp  FixGateway.h  LatencyStats.h  MessageFactory.h
src/market_data/: MarketDataEvent.h  MarketDataPublisher.cpp  MarketDataPublisher.h
src/persistence/: PersistenceLayer.cpp  PersistenceLayer.h
src/risk/: RiskEngine.cpp  RiskEngine.h
tests/: bench.py  helpers.py  run_all.py  test_exchange.py  test_market_data.py  test_orders.py  test_persistence.py  test_replace.py  test_risk.py  test_session.py  test_tif.py  test_ui_server.py
tools/: client.py
ui/: fix_client.py  main.py
ui/static/: index.html
